# homework_8

./: CMakeLists.txt  README.md  bayan.cpp
.github/workflows/: release.yml
